--- a/typography.html
+++ b/typography.html
@@ -40,8 +40,8 @@
     <div class="wrap">
         <h2>CREDITS</h2>
         <p>Copyright // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
-        <p>Photograph // James Baldwin: Popperfoto/Getty Images</p>
-        <p>Photograph // George Floyd: Darnella Frazier</p>
+        <p>Photograph // James Baldwin Image: Popperfoto/Getty Images</p>
+        <p>Photograph // George Floyd Image-Left: Darnella Frazier</p>
     </div>
 <footer>
     <div class="copyright">
