--- a/film.html
+++ b/film.html
@@ -26,7 +26,8 @@
       <div class="container">
 
 <div class="wrap">
-<h1>COMING SOON</h1>
+<h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
+<p>Short narrative or documentary films that I completed as projects for courses, Intro To Media Production (2021) & Non-Linear Video Editing (2022).</p>
 </div>
 <footer>
     <div class="copyright">
