--- a/film.html
+++ b/film.html
@@ -27,7 +27,10 @@
 
 <div class="wrap">
 <h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
-<p>Short narrative or documentary films that I completed as projects for courses, Intro To Media Production (2021) & Non-Linear Video Editing (2022).</p>
+<p>Short films that I completed as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
+<p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
+<p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
+<p><em>Can't Escape The Mischief</em> is an entertaining feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
 </div>
 <footer>
     <div class="copyright">
