--- a/database.html
+++ b/database.html
@@ -27,7 +27,7 @@
 <!--SECTION/ARTICES-->
 <div class="container">
 <div class="wrap">
-<h1>ITEC 3610 DATABASE ASSESSMENT</h1>
+<h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
 <P>A database assessment I completed in Intro to IT & Applications course (ITEC 3610).</P>
 <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">Check out
     the database on Google Sheets.</a>
@@ -35,7 +35,7 @@
 <!--optimized image here-->
 
 <div class="wrap">
-    <h1>ITEC 3610 INVENTORY DATABASE</h1>
+    <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
     <P>A database exercise I completed in Intro to IT & Applications course (ITEC 3610).</P>
     <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">Check out
         the database on Google Sheets.</a>
