--- a/film.html
+++ b/film.html
@@ -32,6 +32,9 @@
 <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
 <p><em>Can't Escape The Mischief</em> is an entertaining feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
 </div>
+<!--VIDEO GRAPHIC IMAGE-->
+<!--VIDEO OF CAUSE THAT'S WHAT I DO-->
+<!--VIDEO OF CAN'T ESCAPE THE MISCHIEF-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
