--- a/programming.html
+++ b/programming.html
@@ -28,19 +28,21 @@
 <div class="container">
 
 <div class="wrap">
-    <h1>ITEC 3650 MARS ROVER</h1>
-    <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed in Intro to IT & Applications course (ITEC 3650).</P>
+    <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // MARS ROVER 2022</h1>
+    <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed.</P>
     <a href="" target="blank">Test the program here.</a>
     </div>
-    <!--optimized image of rover close up here-->
+    <!--optimized image of rover right of text-->
+    <!--code source image below-left-->
     
+    <!--optimized image of currency to left of text-->
     <div class="wrap">
-        <h1>ITEC 3610 CURRENCY VALUE HISTORY</h1>
-        <P>An application of JSON to retreive & convert currency values from Polygon.io that I developed in Intro to IT &
-            Applications course (ITEC 3650).</P>
+        <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // CURRENCY VALUE HISTORY</h1>
+        <P>An application of JSON to retreive & convert currency values from Polygon.io that I developed.</P>
         <a href="" target="blank">Test the program here.</a>
     </div>
-    <!--optimized image here-->
+        <!--code source image below-right-->
+
 <footer>
     <div class="copyright">
        &copy JAW 2022
