--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -24,6 +24,7 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
 <div class="container">
+    <!--adobe after effects here top-->
 <div class="wrap">
     <h1>IFCS 3650: GUIDED APPLICATIONS IN IT // BUFFALO RIVER ADVENTURERS 2022</h1>
     <p>A static website for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
@@ -32,6 +33,10 @@
     <p>Design decisions included...</p>
     <a href="" target="blank">Visit the site.</a>
 </div>
+<!--adobe after effects mobile view here to right-->
+<!--logo image here to left of .ae-->
+<!--large prototype image-->
+<a href="">Interact with the prototype here.</a>
 <footer>
     <div class="copyright">
        &copy JAW 2022
