--- a/web-university-district.html
+++ b/web-university-district.html
@@ -24,6 +24,7 @@
             <div class="author">Josephine Aaron Weathington</div>
         </header>
 <div class="container">
+<!--adobe after effects here top-->
 <div class="wrap">
     <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
     <p>A wordpress website for the UALR University District Parnership to market the University District as a destination, to 
@@ -32,6 +33,10 @@
     <p>Design decisions included...</p>
     <a href="https://web-projects.net/ud/" target="blank">Visit the site.</a>
 </div>
+<!--adobe after effects mobile view here to right-->
+<!--logo image here to left of .ae-->
+<!--large prototype image-->
+<a href="">Interact with the prototype here.</a>
 <footer>
     <div class="copyright">
        &copy JAW 2022
