--- a/web-university-district.html
+++ b/web-university-district.html
@@ -36,7 +36,7 @@
 <!--adobe after effects mobile view here to right-->
 <!--logo image here to left of .ae-->
 <!--large prototype image-->
-<a href="">Interact with the prototype here.</a>
+<a href="">Interact with the prototype.</a>
 <footer>
     <div class="copyright">
        &copy JAW 2022
