--- a/reflection.html
+++ b/reflection.html
@@ -24,8 +24,48 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
       <div class="container">
+        <!--Adobe after effects full width-->
 <div class="wrap">
-<h1>COMING SOON</h1>
+<h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
+<p>A reflection on my Capstone Project - the development of the University District website.</p>
+<dl>
+    <dt>PROJECT DESCRIPTION</dt>
+    <dd></dd>
+    <dt>PROJECT ROLES</dt>
+    <dd>Struction & Design...</dd>
+</dl>
+</div>
+<!--Image to right of text-->
+<!--SECTION & ARTICLES-->
+<div class="wrap">
+    <h1>REFLECTION</h1>
+    <dl>
+        <dt>My most challenging moments and what made them so...</dt>
+        <dd>...</dd>
+    </dl>
+<!--image-->
+    <dl>
+        <dt>My most powerful learning moments and what made them so...</dt>
+        <dd>...</dd>
+    </dl>
+<!--image-->
+    <dl>
+        <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
+        <dd>...</dd>
+    </dl>
+    <dl>
+        <dt>The most important thing I learned personally...</dt>
+        <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
+            mean doing whatever we want, but doing what we can with what we know to create that something that increases our chances 
+            (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
+            we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
+            distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
+            within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
+            if only we allow ourselves to submit to its process and <u>actively participate</u> in following its instructions. 
+            For a visual of growing into freedom, check out my video below, 
+                        <em>Watch Me Grow</em>.
+            </dd>
+    </dl>
 </div>
 <footer>
     <div class="copyright">
