--- a/typography.html
+++ b/typography.html
@@ -39,7 +39,7 @@
     <!--IMAGE OF POSTER FOR CHANGE ON RIGHT, MAGAZINE COVER ON LEFT-->
     <div class="wrap">
         <h2>CREDITS</h2>
-        <p>Copyright // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
+        <p>Copywriter // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
         <p>Photograph // James Baldwin Image: Popperfoto/Getty Images</p>
         <p>Photograph // George Floyd Image-Left: Darnella Frazier</p>
     </div>
