--- a/projects.html
+++ b/projects.html
@@ -81,10 +81,10 @@
     <p>"Design is intelligence made visible." -- Alina Wheeler, author</p>
     <p>“Every great design begins with an even better story”. -- Lorinda Mamo, designer and creative director</p>
     <div class="temporary">
-        <a href="technical-doc.html" target="blank">Technical Documents</a>
+        <a href="technical-doc.html">Technical Documents</a>
     </div>
     <div class="temporary">
-        <a href="reflection.html" target="blank">Watch Me Grow</a>
+        <a href="reflection.html">Watch Me Grow</a>
     </div>
     <!--End Section-->
 
