--- a/reflection.html
+++ b/reflection.html
@@ -61,7 +61,7 @@
             we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
             distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
             within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
-            if only we allow ourselves to submit to its process and <u>actively participate</u> in following its instructions. 
+            if only we allow ourselves to <b>submit</b> to its process and <b>actively participate</b> in following its instructions. 
             For a visual of growing into freedom, check out my video below, 
                         <em>Watch Me Grow</em>.
             </dd>
