--- a/reflection.html
+++ b/reflection.html
@@ -30,10 +30,23 @@
 <p>A reflection on my Capstone Project - the development of the University District website.</p>
 <dl>
     <dt>PROJECT DESCRIPTION</dt>
-    <dd></dd>
+    <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
+        neighborhoods around the campus for the past 20 years. My team's project was to develop a website that can be a marketing 
+        vehicle for the entire university district and all of their related programs/partners.
+    </dd>
     <dt>PROJECT ROLES</dt>
-    <dd>Struction & Design...</dd>
+    <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
+        My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
+        expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
+        it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
+        determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
+        us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. Once the pages 
+        were created, my teammates collected the content and entered the content within the site. Last, we researched and applied 
+        additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
+        responsive design and accessibility.  Finally, we presented our final product to our client and class. To view our design 
+        process, check out my team’s Google Slides presentation on <em>page 5</em>.</dd>
 </dl>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
 <!--Image to right of text-->
 <!--SECTION & ARTICLES-->
@@ -56,7 +69,7 @@
     <dl>
         <dt>The most important thing I learned personally...</dt>
         <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
-            mean doing whatever we want, but doing what we can with what we know to create that something that increases our chances 
+            mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
             (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
             we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
             distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
