--- a/database.html
+++ b/database.html
@@ -28,7 +28,9 @@
 <div class="container">
 <div class="wrap">
 <h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
-<P>A database assessment I completed in Intro to IT & Applications course (ITEC 3610).</P>
+<P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace.
+    So here are a couple of exercies that I completed within Google Sheets. To the right is a 
+    database assessment that I completed.</P>
 <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">Check out
     the database on Google Sheets.</a>
 </div>
@@ -36,7 +38,7 @@
 
 <div class="wrap">
     <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
-    <P>A database exercise I completed in Intro to IT & Applications course (ITEC 3610).</P>
+    <P>An inventory database exercise that I completed.</P>
     <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">Check out
         the database on Google Sheets.</a>
 </div>
