--- a/technical-doc.html
+++ b/technical-doc.html
@@ -24,13 +24,13 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
 <div class="container">
-    <!--Large image of Adobe XD doc title-->
+    <!--Large image of Adobe XD doc title After Effects-->
 <div class="wrap">
 <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
 <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
     means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
     how to view a website prototype through Adobe XD.</p>
-<a href="">Interact with the prototype.</a>
+<a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
 </div>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
