--- a/programming.html
+++ b/programming.html
@@ -32,7 +32,7 @@
     <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed.</P>
     <a href="" target="blank">Test the program here.</a>
     </div>
-    <!--optimized image of rover right of text-->
+    <!--Embed js code of rover right of text-->
     <!--code source image below-left-->
     
     <!--optimized image of currency to left of text-->
@@ -41,7 +41,7 @@
         <P>An application of JSON to retreive & convert currency values from Polygon.io that I developed.</P>
         <a href="" target="blank">Test the program here.</a>
     </div>
-        <!--code source image below-right-->
+        <!--embed js code below-right-->
 
 <footer>
     <div class="copyright">
