--- a/reflection.html
+++ b/reflection.html
@@ -51,7 +51,6 @@
 </dl>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
-<!--Image to right of text-->
 <!--SECTION & ARTICLES-->
 <div class="wrap">
     <h1>REFLECTION</h1>
@@ -59,12 +58,10 @@
         <dt>My most challenging moments and what made them so...</dt>
         <dd>...</dd>
     </dl>
-<!--image-->
     <dl>
         <dt>My most powerful learning moments and what made them so...</dt>
         <dd>...</dd>
     </dl>
-<!--image-->
     <dl>
         <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
         <dd>...</dd>
@@ -78,11 +75,11 @@
             distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
             within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
             if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
-            For a visual of growing into freedom, check out my video below, 
-                        <em>Watch Me Grow</em>.
+            For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
             </dd>
     </dl>
 </div>
+<!--ANIMATION VIDEO-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
