--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-        <header class="primary">
-    <div class="navigation">
-        <div class="brand">JAW</div>
-        <nav class="menu">
-            <ul>
-                <li><a href="projects.html">PROJECTS</a></li>
-                <li><a href="index.html">INTRO</a></li>
-            </ul>
+    <header class="primary">
+        <nav class="navbar bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
+                </ul>
+            </div>
         </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
         </div>
-        <div class="author">Josephine Aaron Weathington</div>
     </header>
-    <div class="container">
-    <h1>Hey, I'm Josephine.</h1>
+
+    <div class="container intro">
+        <div class="row">
+            <div class="col-md-8">
+            <h1>Hey, I'm Josephine.</h1>
         <p>I'm a designer and am currently studying at the University of Arkansas at 
         Little Rock (UALR). I'll be graduating this December 2022 with a 
         Bachelors of Arts Web Design & Development and Information 
@@ -61,7 +71,9 @@
         <dt>COLLABORATION TOOLS</dt>
         <dd>Figma, Trello, Google Workspace</dd>
     </dl>
-    <img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
+</div>
+    <div class="col-6 col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="portrait"/> </div>  
+</div>
 <footer>
     <div class="copyright">
        &copy JAW 2022
