--- a/database.html
+++ b/database.html
@@ -32,28 +32,35 @@
     </header>
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
-<div class="container">
-<div class="wrap">
-<h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
-<P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace.
-    So here are a couple of exercies that I completed within Google Sheets. To the right is a 
-    database assessment that I completed.</P>
-<a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">Check out
-    the database on Google Sheets.</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-md">
+        <h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
+        <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. So here are a 
+          couple of exercies that I completed within Google Sheets. To the right is a database assessment that I completed.</P>
+        <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
+          Check out the database on Google Sheets.</a>
+      </div>
+      <div class="col-md">
+        <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="placeholder">
+      </div>
 </div>
-<!--optimized image here-->
 
-<div class="wrap">
-    <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
-    <P>An inventory database exercise that I completed.</P>
-    <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">Check out
-        the database on Google Sheets.</a>
-</div>
-<!--optimized image here-->
+    <div class="row">
+      <div class="col-md">
+        <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="placeholder">
+      </div>
+      <div class="col-md">
+        <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
+        <p>An inventory database exercise that I completed.</p>
+        <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
+          Check out the database on Google Sheets.</a>
+      </div>
+    </div>
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-    <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
     <!--brand logo here-->
     </div>
 
@@ -62,7 +69,7 @@
       <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
       <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
     </ul>
-  </footer>
+</footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
