--- a/film.html
+++ b/film.html
@@ -14,37 +14,52 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header class="primary">
-      <div class="navigation">
-          <div class="brand">JAW</div>
-          <nav class="menu">
-              <ul>
-                  <li><a href="projects.html">PROJECTS</a></li>
-                  <li><a href="index.html">INTRO</a></li>
-              </ul>
-          </nav>
-          </div>
-          <div class="author">Josephine Aaron Weathington</div>
-      </header>
-      <div class="container">
-
-<div class="wrap">
-<h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
-<p>Short films that I completed as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
-<p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
-<p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
-<p><em>Can't Escape The Mischief</em> is an entertaining feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
-</div>
+    <header class="primary">
+        <nav class="navbar bg-light">
+            <div class="container text-muted border-bottom">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
+        </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
+                <p>Short films that I completed as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
+                <p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
+                <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
+                <p><em>Can't Escape The Mischief</em> is an entertaining feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
+            </div>
+            <div class="col-md">
+                <img src="assets/images/film.png" class="img-fluid" alt="placeholder">
+            </div>
+        </div>
 <!--VIDEO GRAPHIC IMAGE-->
 <!--VIDEO OF CAUSE THAT'S WHAT I DO-->
 <!--VIDEO OF CAN'T ESCAPE THE MISCHIEF-->
-<footer>
-    <div class="copyright">
-       &copy JAW 2022
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+    <!--brand logo here-->
     </div>
-    <div class="contact">
-       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
-    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
+    </ul>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
