--- a/programming.html
+++ b/programming.html
@@ -14,45 +14,73 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header class="primary">
-      <div class="navigation">
-          <div class="brand">JAW</div>
-          <nav class="menu">
-              <ul>
-                  <li><a href="projects.html">PROJECTS</a></li>
-                  <li><a href="index.html">INTRO</a></li>
-              </ul>
-          </nav>
-          </div>
-          <div class="author">Josephine Aaron Weathington</div>
-      </header>
+    <header class="primary">
+        <nav class="navbar bg-light">
+            <div class="container text-muted border-bottom">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
+        </div>
+    </header>
+    <div class="container">
 <!--JUMBOTRON HERE MARS ROVER // change picture to adobe free stock pic-->
-<!--SECTION/ARTICES-->
-<div class="container">
-
-<div class="wrap">
-    <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // MARS ROVER 2022</h1>
-    <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed.</P>
-    <a href="" target="blank">Test the program here.</a>
-    </div>
+        <div class="row">
+            <div class="col-md">
+                <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // MARS ROVER 2022</h1>
+                    <p>A JSON API retrieval of the Mars Rover photos from NASA that I developed.</p>
+                    <a href="" target="blank">Test the program here.</a>
+            </div>
+            <div class="col-md">
+                <img src="assets/images/mars-explorer.webp">
+            </div>
+        </div>
     <!--Embed js code of rover right of text-->
+    <div class="row">
+        <div class="col-md">
+                <p>Embed/image of source code goes here</p>
+        </div>
+    </div>
     <!--code source image below-left-->
-    
-    <!--optimized image of currency to left of text-->
-    <div class="wrap">
-        <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // CURRENCY VALUE HISTORY</h1>
-        <P>An application of JSON to retreive & convert currency values from Polygon.io that I developed.</P>
-        <a href="" target="blank">Test the program here.</a>
-    </div>
+           <div class="row">
+            <div class="col-md">
+                <img src="assets/images/currency-value.webp">
+            </div>
+            <div class="col-md">
+                <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // CURRENCY VALUE HISTORY</h1>
+                <p>An application of JSON to retreive & convert currency values from Polygon.io that I developed.</p>
+                <a href="" target="blank">Test the program here.</a>
+            </div>
+        </div>
         <!--embed js code below-right-->
+        <div class="row">
+            <div class="col-md"></div>
+            <div class="col-md">
+                    <p>Embed/image of source code goes here</p>
+            </div>
+        </div>
 
-<footer>
-    <div class="copyright">
-       &copy JAW 2022
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+    <!--brand logo here-->
     </div>
-    <div class="contact">
-       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
-    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
+    </ul>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
