--- a/programming.html
+++ b/programming.html
@@ -63,10 +63,9 @@
             </div>
         </div>
         <!--embed js code below-right-->
-        <div class="row">
-            <div class="col-md"></div>
+        <div class="row justify-content-end">
             <div class="col-md">
-                    <p>Embed/image of source code goes here</p>
+                <p>Embed/image of source code goes here</p>
             </div>
         </div>
 
