--- a/projects.html
+++ b/projects.html
@@ -15,84 +15,116 @@
 </head>
 <body>
     <header class="primary">
-        <div class="navigation">
-            <div class="brand">JAW</div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="index.html">INTRO</a></li>
+        <nav class="navbar bg-light">
+            <div class="container text-muted border-bottom">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
                 </ul>
-            </nav>
             </div>
-            <div class="author">Josephine Aaron Weathington</div>
-        </header>
-        <div class="container">
+        </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
+        </div>
+    </header>
+    <div class="container">
     <!--Section & Articles-->
-    <h1>WEB DEVELOPMENT & DESIGN</h1>
-    <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
-        - Intro to IT and Applications (2021 - 2022) // Straight outta the course syllabus.
-    </p>
-    <p>"Design is the intermediary between information and understanding." -- Hans Hoffman, artist and teacher</p>
-    <div class="temporary">
-    <a href="web-buffalo-river.html">Buffalo River Adventurers</a>
-    </div>
-    <div class="temporary">
-        <a href="web-university-district.html">University District</a>
-    </div>
+        <div class="row">
+            <div class="col-md">
+                <h1>WEB DEVELOPMENT & DESIGN</h1>
+                <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
+                    - Intro to IT and Applications (2021 - 2022) // Straight outta the course syllabus.
+                </p>
+                <p>"Design is the intermediary between information and understanding." -- Hans Hoffman, artist and teacher</p>
+            </div>
+            <div class="col-md">
+                <a href="web-buffalo-river.html">Buffalo River Adventurers</a>
+            </div>
+            <div class="col-md">
+                <a href="web-university-district.html">University District</a>
+            </div>
+        </div>
     <!--End Section-->
       
     <!--Section & Articles-->
-    <h1>UX DESIGN</h1>
-    <p>"Make it simple, but significant." -- Don Draper, fictional character on Mad Men</p>
-    <p>"Design is not just what it looks like and feels like. Design is how it works." -- Steve Jobs, co-founder of Apple, Inc.</p>
-    <div class="temporary">
-        <a href="ux-campus-police.html">UALR Campus Police App</a>
-    </div>
-    <div class="temporary">
-        <a href="ux-campus-food.html">UALR Food Ordering Service App</a>
-    </div>
+        <div class="row">
+            <div class="col-md">        
+                <a href="ux-campus-police.html">UALR Campus Police App</a>
+            </div>
+            <div class="col-md">        
+                <a href="ux-campus-food.html">UALR Food Ordering Service App</a>
+            </div>
+            <div class="col-md"><h1>UX DESIGN</h1>
+                <p>"Make it simple, but significant." -- Don Draper, fictional character on Mad Men</p>
+                <p>"Design is not just what it looks like and feels like. Design is how it works." -- Steve Jobs, co-founder of Apple, Inc.</p>
+            </div>
+        </div>
     <!--End Section-->
 
 
     <!--Section & Articles-->
-    <h1>DATABASE & PROGRAMMING</h1>
-    <p>"Design adds value faster than it adds costs." -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
-    <div class="temporary">
-        <a href="database.html">Database</a>
-    </div>
-    <div class="temporary">
-        <a href="programming.html">Programming</a>
-    </div>
+        <div class="row">
+            <div class="col-md">    
+                <h1>DATABASE & PROGRAMMING</h1>
+                <p>"Design adds value faster than it adds costs." -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
+            </div>
+            <div class="col-md">        
+                <a href="database.html">Database</a>
+            </div>
+            <div class="col-md">
+                <a href="programming.html">Programming</a>
+            </div>
+        </div>
     <!--End Section-->
 
 
     <!--Section & Articles-->
-    <h1>COMMUNICATION</h1>
-    <p>"Design creates culture. Culture shapes values. Values determine the future." -- Robert L. Peters, designer and author</p>
-    <p>"Styles come and go. Good design is a language, not a style." -- Massimo Vignelli, Italian designer</p>
-    <div class="temporary">
-        <a href="film.html">Film</a>
-    </div>
-    <div class="temporary">
-        <a href="typography.html">Typography</a>
-    </div>
+        <div class="row">
+            <div class="col-md">
+                <a href="film.html">Film</a>
+            </div>
+            <div class="col-md">        
+                <a href="typography.html">Typography</a>
+            </div>
+            <div class="col-md">    
+                <h1>COMMUNICATION</h1>
+                <p>"Design creates culture. Culture shapes values. Values determine the future." -- Robert L. Peters, designer and author</p>
+                <p>"Styles come and go. Good design is a language, not a style." -- Massimo Vignelli, Italian designer</p>
+            </div>
+        </div>
+
+
     <!--End Section-->
 
 
     <!--Section & Articles-->
-    <h1>WRITING</h1>
-    <p>"Design is intelligence made visible." -- Alina Wheeler, author</p>
-    <p>“Every great design begins with an even better story”. -- Lorinda Mamo, designer and creative director</p>
-    <div class="temporary">
-        <a href="technical-doc.html">Technical Documents</a>
-    </div>
-    <div class="temporary">
-        <a href="reflection.html">Watch Me Grow</a>
-    </div>
+        <div class="row">
+            <div class="col-md">    
+                <h1>WRITING</h1>
+                <p>"Design is intelligence made visible." -- Alina Wheeler, author</p>
+                <p>“Every great design begins with an even better story”. -- Lorinda Mamo, designer and creative director</p></div>
+            <div class="col-md">        
+                <a href="technical-doc.html">Technical Documents</a>
+            </div>
+            <div class="col-md">        
+                <a href="reflection.html">Watch Me Grow</a>
+            </div>
+        </div>
     <!--End Section-->
 
     
-    <!--Section & Articles-->
+    <!--Section & Articles
+    <div class="row">
+        <div class="col-md"></div>
+        <div class="col-md"></div>
+        <div class="col-md"></div>
+    </div>
     <h1>OTHER PROJECTS</h1>
     <div class="temporary">
         <a href="technical-doc.html" target="blank">...</a>
@@ -103,14 +135,18 @@
     <div class="temporary">
         <a href="reflection.html" target="blank">...</a>
     </div>
-    <!--End Section--> 
-<footer>
-    <div class="copyright">
-       &copy JAW 2022
+-->
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+    <!--brand logo here-->
     </div>
-    <div class="contact">
-       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
-    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
+    </ul>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
