--- a/film.html
+++ b/film.html
@@ -40,7 +40,7 @@
                 <p>Short films that I completed as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
                 <p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
                 <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
-                <p><em>Can't Escape The Mischief</em> is an entertaining feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
+                <p><em>Can't Escape The Mischief</em> is an feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
             </div>
             <div class="col-md">
                 <img src="assets/images/film.png" class="img-fluid" alt="placeholder">
