--- a/typography.html
+++ b/typography.html
@@ -14,31 +14,67 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header class="primary">
-      <div class="navigation">
-          <div class="brand">JAW</div>
-          <nav class="menu">
-              <ul>
-                  <li><a href="projects.html">PROJECTS</a></li>
-                  <li><a href="index.html">INTRO</a></li>
-              </ul>
-          </nav>
-          </div>
-          <div class="author">Josephine Aaron Weathington</div>
-      </header>
+    <header class="primary">
+        <nav class="navbar bg-light">
+            <div class="container text-muted border-bottom">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
+        </div>
+    </header>
       <!--JUMBOTRON MENU IMAGE HERE-->
     <div class="container">
-        <div class="wrap">
-        <h1>ARST 3341: TYPOGRAPHY 2021</h1>
-            <p>An exploration of the art and practice of typography as a tool for visual communication.</p>
-    </div>
-    <!--INFO TYPE IMAGE TO THE RIGHT OF TEXT-->
+        <img src="assets/images/menu-redesign.webp">
+        <div class="row">
+            <div class="col-6 col-md-4">
+                <h1>ARST 3341: TYPOGRAPHY 2021</h1>
+                <p>An exploration of the art and practice of typography as a tool for visual communication.</p>
+            </div>
+            <div class="col-md-8">
+                <img src="assets/images/info-type-1.1.webp">
+            </div>
+        </div>
+        
     <!--2 INFO TYPE IMAGES TO LEFT AND RIGHT-->
-    <!--PUBLICATION DESIGN FULL WIDTH-->
-    <div class="wrap">
-        <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
-            <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
-    </div>
+        <div class="row">
+            <div class="col-md">
+                <img src="assets/images/info-type-2.1.webp">
+            </div>
+            <div class="col-md">
+                <img src="assets/images/info-type-3.1.webp">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md">
+                <img src="assets/images/publication.webp">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <img src="assets/images/Magazine.Cover.webp">
+            </div>
+            <div class="col-6 col-md-4">
+                <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
+                <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md">
+                <img src="assets/images/poster.webp"> 
+            </div>
+        </div>
+
     <!--IMAGE OF POSTER FOR CHANGE ON RIGHT, MAGAZINE COVER ON LEFT-->
     <div class="wrap">
         <h2>CREDITS</h2>
@@ -46,13 +82,17 @@
         <p>Photograph // James Baldwin Image: Popperfoto/Getty Images</p>
         <p>Photograph // George Floyd Image-Left: Darnella Frazier</p>
     </div>
-<footer>
-    <div class="copyright">
-       &copy JAW 2022
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+    <!--brand logo here-->
     </div>
-    <div class="contact">
-       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
-    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
+    </ul>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
