--- a/reflection.html
+++ b/reflection.html
@@ -35,21 +35,18 @@
     </header>
       <div class="container">
         <!--Adobe after effects full width-->
-        <div class="embed-responsive embed-responsive-21by9">
-            <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-        </div>
         <div class="row">
             <div class="col-md">
-            <h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
-<p>A reflection on my Capstone Project - the development of the University District website.</p>
-<dl>
-    <dt>PROJECT DESCRIPTION</dt>
-    <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
+                <h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
+                <p>A reflection on my Capstone Project - the development of the University District website.</p>
+                <dl>
+                <dt>PROJECT DESCRIPTION</dt>
+                <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
         neighborhoods around the campus for the past 20 years. My team's project was to develop a website that can be a marketing 
         vehicle for the entire university district and all of their related programs/partners.
-    </dd>
-    <dt>PROJECT ROLES</dt>
-    <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
+                </dd>
+                <dt>PROJECT ROLES</dt>
+                <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
         My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
         expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
         it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
@@ -59,12 +56,14 @@
         additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
         responsive design and accessibility.  Finally, we presented our final product to our client and class. To view our design 
         process, check out my team’s Google Slides presentation on <em>page 5</em>.</dd>
-</dl>
-</div>
-<div class="col-md">
-<p>Animation Here</p>
-</div>
-</div>
+                </dl>
+            </div>
+            <div class="col-md">
+                <div class="google-slides-container">
+                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+            </div>
+        </div>
 
 <!--SECTION & ARTICLES-->
 <section class="reflection">
