--- a/reflection.html
+++ b/reflection.html
@@ -66,34 +66,35 @@
         </div>
 
 <!--SECTION & ARTICLES-->
-<section class="reflection">
-    <h1>REFLECTION</h1>
-    <dl>
-        <dt>My most challenging moments and what made them so...</dt>
-        <dd>...</dd>
-    </dl>
-    <dl>
-        <dt>My most powerful learning moments and what made them so...</dt>
-        <dd>...</dd>
-    </dl>
-    <dl>
-        <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
-        <dd>...</dd>
-    </dl>
-    <dl>
-        <dt>The most important thing I learned personally...</dt>
-        <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
-            mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
-            (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
-            we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
-            distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
-            within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
-            if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
-            For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
-            </dd>
-    </dl>
-</section>
+        <section class="reflection">
+            <h1>REFLECTION</h1>
+                <dl>
+                    <dt>My most challenging moments and what made them so...</dt>
+                    <dd>...</dd>
+                </dl>
+                <dl>
+                    <dt>My most powerful learning moments and what made them so...</dt>
+                    <dd>...</dd>
+                </dl>
+                <dl>
+                    <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
+                    <dd>...</dd>
+                </dl>
+                <dl>
+                    <dt>The most important thing I learned personally...</dt>
+                    <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
+                        mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
+                        (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
+                        we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
+                        distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
+                        within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
+                        if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
+                        For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
+                    </dd>
+                </dl>
+        </section>
 <!--ANIMATION VIDEO-->
+<a href="">Animation</a>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
