--- a/reflection.html
+++ b/reflection.html
@@ -68,19 +68,19 @@
 <!--SECTION & ARTICLES-->
         <section class="reflection">
             <h1>REFLECTION</h1>
-                <dl>
+                <dl class="reflection-1">
                     <dt>My most challenging moments and what made them so...</dt>
                     <dd>...</dd>
                 </dl>
-                <dl>
+                <dl class="reflection-2">
                     <dt>My most powerful learning moments and what made them so...</dt>
                     <dd>...</dd>
                 </dl>
-                <dl>
+                <dl class="reflection-3">
                     <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
                     <dd>...</dd>
                 </dl>
-                <dl>
+                <dl class="reflection-4">
                     <dt>The most important thing I learned personally...</dt>
                     <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
                         mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
