--- a/technical-doc.html
+++ b/technical-doc.html
@@ -14,36 +14,52 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header class="primary">
-      <div class="navigation">
-          <div class="brand">JAW</div>
-          <nav class="menu">
-              <ul>
-                  <li><a href="projects.html">PROJECTS</a></li>
-                  <li><a href="index.html">INTRO</a></li>
-              </ul>
-          </nav>
-          </div>
-          <div class="author">Josephine Aaron Weathington</div>
-      </header>
-<div class="container">
+    <header class="primary">
+        <nav class="navbar bg-light">
+            <div class="container text-muted border-bottom">
+              <a class="navbar-brand" href="#">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">INTRO</a>
+                </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container author">
+        Josephine Aaron Weathington
+        </div>
+    </header>
+    <div class="container">
     <!--Large image of Adobe XD doc title After Effects-->
-<div class="wrap">
-<h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
-<p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
+        <div class="row">
+            <div class="col-6 col-md-4">
+            <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
+            <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
     means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
     how to view a website prototype through Adobe XD.</p>
-<a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
-</div>
+            <a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
+            </div>
+            <div class="col-md-8">
+            <img src="">
+            </div>
+        </div>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
-<footer>
-    <div class="copyright">
-       &copy JAW 2022
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+    <!--brand logo here-->
     </div>
-    <div class="contact">
-       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
-    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
+    </ul>
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
